--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -14,6 +14,8 @@
         <ShellContent Title="Despre"
                       ContentTemplate="{DataTemplate local:Home}"
 />
+        <ShellContent Title="Membrii inregistrati la baza de date"
+                      ContentTemplate="{DataTemplate local:PaginaIntrariMembri}"/>
     </TabBar>
 
 </Shell>
