--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiAppBazaSportiva.ListPage"
+             xmlns:local="clr-namespace:MauiAppBazaSportiva"
+    x:Class="MauiAppBazaSportiva.ListPage"
              Title="ListPage">
     <StackLayout Margin="20">
-        <Entry Placeholder="Introduceti prenumele"
+        <Editor Placeholder="Introduceti prenumele"
                Text="{Binding FirstName}"
-               HeightRequest="50" />
+               HeightRequest="50">
+            <Editor.Behaviors>
+                <local:ValidationBehaviour/>
+            </Editor.Behaviors>
+        </Editor>
 
-        <Entry Placeholder="Introduceti numele"
+
+
+        <Editor Placeholder="Introduceti numele"
                Text="{Binding LastName}"
-               HeightRequest="50" />
+               HeightRequest="50">
+            <Editor.Behaviors>
+                <local:ValidationBehaviour/>
+            </Editor.Behaviors>
+        </Editor>
 
         <Grid>
             <Grid.ColumnDefinitions>
@@ -23,5 +34,14 @@
  Text="Delete"
  Clicked="OnDeleteButtonClicked"/>
         </Grid>
+        <ListView x:Name="listView"
+                Margin="20">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Detail="{Binding MembershipName}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>  
+        <Button Text="Adauga sau alege un abonament" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
     </StackLayout>
 </ContentPage>
