--- a/MembershipPage.xaml
+++ b/MembershipPage.xaml
@@ -4,37 +4,40 @@
              x:Class="MauiAppBazaSportiva.MembershipPage"
              Title="MembershipPage">
     <ContentPage.Content>
-        <StackLayout Margin="20" Spacing="20">
-            <Editor Placeholder="Introdu numele abonamentului" Margin="20"
-                   Text="{Binding MembershipName}"
+            <StackLayout Margin="20" Spacing="20">
+                <Label Text="Adauga un abonament" 
+                   FontSize="20" 
+                   HorizontalOptions="Center"/>
+                <Editor Placeholder="Introdu numele abonamentului" BackgroundColor="White" Margin="20"
+                   Text="{Binding MembershipName}" FontSize="16" 
                    HeightRequest="50"/>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
-                <Button Text="Salveaza abonamentul" Grid.Row="0" Grid.Column="0" MaximumWidthRequest="200"
+                    <Button Text="Salveaza abonamentul" Grid.Row="0" Grid.Column="0" MaximumWidthRequest="200"
                        Clicked="OnSaveButtonClicked" HorizontalOptions="FillAndExpand"/>
-                <Button Grid.Column="1"
+                    <Button Grid.Column="1"
                     Text="Sterge abonamentul" Grid.Row="0" MaximumWidthRequest="200"
                     Clicked="OnDeleteButtonClicked" HorizontalOptions="FillAndExpand"/>
-                <ListView Grid.Row="1" Grid.Column="0" x:Name="listView" Margin="20" IsRefreshing="True" SelectedItem="{Binding SelectedMembership}">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <TextCell Text="{Binding MembershipName}"/>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-                <Button Grid.Row="2" Grid.Column="0" Text="Adauga abonamentul pentru membrii" FontSize="16" HeightRequest="50" WidthRequest="250" HorizontalOptions="Center" VerticalOptions="Center"
+                    <ListView Grid.Row="1" Grid.Column="0" x:Name="listView" Margin="20" HeightRequest="100">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextCell Text="{Binding MembershipName}"/>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <Button Grid.Row="2" Grid.Column="0" Text="Adauga abonamentul pentru membrii"  FontSize="8" HeightRequest="50" WidthRequest="250" HorizontalOptions="Center" VerticalOptions="Center"
                 MaximumWidthRequest="200"
  Clicked="OnAddButtonClicked" />
-            </Grid>
-        </StackLayout>
+                </Grid>
+            </StackLayout>
     </ContentPage.Content>
 </ContentPage>
