inca 2 rel si ajunge

--- a/TrainerPage.xaml
+++ b/TrainerPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppBazaSportiva.TrainerPage"
              Title="TrainerPage">
-    <ContentPage.Content>
+    <ScrollView>
+        
         <StackLayout Margin="20">
             <Editor Placeholder="Introduceti numele antrenorului" Margin="20"
                     Text="{Binding Name}"
@@ -34,6 +35,5 @@ MaximumWidthRequest="300"
  Clicked="OnAddButtonClicked" />
             </Grid>
         </StackLayout>
-    </ContentPage.Content>
-    
+        </ScrollView>
 </ContentPage>
