--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -22,8 +22,6 @@
                 </Editor.Behaviors>
             </Editor>
 
-            
-            
             <Grid Margin="0,10,0,10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -35,6 +33,8 @@
                     Text="Delete"
                     Clicked="OnDeleteButtonClicked" />
             </Grid>
+
+            <!-- Detalii Abonament -->
             <Grid Margin="0,10,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -65,6 +65,7 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </Grid>
+
             <Grid Margin="0,10,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
@@ -74,16 +75,15 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <!-- Label for 'Antrenor selectat' -->
                 <Grid Grid.Row="0" Grid.Column="0" VerticalOptions="Center">
                     <Label Text="Antrenor selectat:" 
-               FontAttributes="Bold" 
-               VerticalOptions="Center" />
+                       FontAttributes="Bold" 
+                       VerticalOptions="Center" />
                 </Grid>
 
                 <Grid Grid.Row="0" Grid.Column="1" VerticalOptions="Center">
                     <Label Text="{Binding Trainer.Name}" 
-               VerticalOptions="Center" />
+                       VerticalOptions="Center" />
                 </Grid>
 
                 <ListView Grid.Row="1" Grid.Column="1" x:Name="listViewTrainer"
@@ -99,14 +99,53 @@
                 </ListView>
             </Grid>
 
-
             <Button Text="Adauga sau alege un abonament"
                 MaximumWidthRequest="500"
                 Margin="0,10"
                 Clicked="OnChooseButtonClicked" />
             <Button Text="Adauga sau alege un antrenor" MaximumWidthRequest="500"
       Margin="0,10"          Clicked="OnChooseButtonClickedTrainer"/>
+            <Button Text="Adauga o rezervare" MaximumWidthRequest="500" Margin="0,10"
+                    Clicked="OnChooseButtonClickedReservation"/>
+
+            <!-- Lista Rezervărilor -->
+            <Grid Margin="0,10,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Grid Grid.Row="0" Grid.Column="0" VerticalOptions="Center">
+                    <Label Text="Lista rezervărilor:" 
+                       FontAttributes="Bold" 
+                       VerticalOptions="Center" />
+                </Grid>
+
+                <Grid Grid.Row="0" Grid.Column="1" VerticalOptions="Center">
+                    <Label Text="{Binding Reservation.Duration}" 
+                           
+                       VerticalOptions="Center" />
+                </Grid>
+
+                <ListView Grid.Row="1" Grid.Column="1" x:Name="listViewReservation"
+                          VerticalOptions="Center"
+                          ItemsSource="{Binding Reservation}" 
+                          SelectedItem="{Binding Reservation}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout Padding="10">
+                                    <Label Grid.Column="0" Text="{Binding Duration}" FontAttributes="Bold" />
+                                    <Label Text="{Binding ReservationDate, StringFormat='{0:dd/MM/yyyy HH:mm}'}" FontAttributes="Italic" />
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
         </StackLayout>
     </ScrollView>
-
 </ContentPage>
